--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Portfolio de Faysel MENAN</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -25,19 +25,19 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about">About</a>
+                <a href="#about">Présentation</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
+                <a href="#experience">Expériences</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="#education">Etudes</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="#projects">Projets</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#skills">Compétences</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Faysel MENAN</h1>
+            <h2>Développeur</h2>
+            <a href="#" class="btn-rounded-white">Télécharger un C.V.</a>
         </div>
         <!-- End #lead-content -->
 
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading">Présentation</h2>
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -84,11 +84,11 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Expériences</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="Octobre 2019 – Juin 2021">
+                <h3>Atempo</h3>
+                <h4>Développeur</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
@@ -113,40 +113,26 @@
     </div>
     <!-- End #experience -->
 
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+    <div id="etudes">
+        <h2 class="heading">Etudes</h2>
+        <div class="etudes-block">
+            <h3>UTEC - AVON</h3>
+            <span class="education-date">Sept 2019 - Juin 2021</span>
+            <h4>BTS SIO option SLAM</h4>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <h3>Université Evry Val-d'Essonne</h3>
+            <span class="education-date">Sept 2018 - Juin 2019</span>
+            <h4>L1 Informatique</h4>
         </div>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Projets</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
@@ -185,31 +171,22 @@
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
+    <div id="competences">
+        <h2 class="heading">Compétences</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
+            <li>Unity</li>
+            <li>Perl</li>
+            <li>Mathlabs</li>
+            <li>SolidWorks</li>
+            <li>JavaScript</li>
             <li>Java</li>
-            <li>C</li>
+            <li>HTML</li>
             <li>C#</li>
             <li>C++</li>
             <li>Ruby on Rails</li>
-            <li>JavaScript</li>
             <li>Python</li>
             <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
             <li>C</li>
             <li>C#</li>
             <li>C++</li>
@@ -219,13 +196,13 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Garder le contact</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/xoqqaeky">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
+                <button type="submit">Envoyer</button>
             </form>
         </div>
         <!-- End #contact-form -->
@@ -237,7 +214,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2019 Faysel
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,7 +225,7 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/Siafall" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
@@ -261,9 +238,6 @@
                         </li>
                         <li>
                             <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
