--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
             <h3>UTEC - AVON</h3>
             <span class="education-date">Sept 2019 - Juin 2021</span>
             <h4>BTS SIO option SLAM</h4>
+			<ul>
+				<li></>
+				<li></>
+				<li></>
+				<li></>	
+			</ul>
         </div>
         <!-- End .education-block -->
 
@@ -126,6 +132,12 @@
             <h3>Université Evry Val-d'Essonne</h3>
             <span class="education-date">Sept 2018 - Juin 2019</span>
             <h4>L1 Informatique</h4>
+			<ul>
+				<li></>
+				<li></>
+				<li></>
+				<li></>	
+			</ul>
         </div>
         <!-- End .education-block -->
     </div>
@@ -196,7 +208,7 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Garder le contact</h2>
+        <h2>Me contacter</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/xoqqaeky">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
