--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Faysel MENAN</h1>
             <h2>Développeur</h2>
-            <a href="#" class="btn-rounded-white">Télécharger un C.V.</a>
+            <a href="#" class="btn-rounded-white">Télécharger mon C.V.</a>
         </div>
         <!-- End #lead-content -->
 
@@ -113,18 +113,12 @@
     </div>
     <!-- End #experience -->
 
-    <div id="etudes">
+    <div id="education-block">
         <h2 class="heading">Etudes</h2>
         <div class="etudes-block">
             <h3>UTEC - AVON</h3>
             <span class="education-date">Sept 2019 - Juin 2021</span>
             <h4>BTS SIO option SLAM</h4>
-			<ul>
-				<li></>
-				<li></>
-				<li></>
-				<li></>	
-			</ul>
         </div>
         <!-- End .education-block -->
 
@@ -133,11 +127,7 @@
             <span class="education-date">Sept 2018 - Juin 2019</span>
             <h4>L1 Informatique</h4>
 			<ul>
-				<li></>
-				<li></>
-				<li></>
-				<li></>	
-			</ul>
+
         </div>
         <!-- End .education-block -->
     </div>
@@ -183,7 +173,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="competences">
+    <div id="skills">
         <h2 class="heading">Compétences</h2>
         <ul>
             <li>Python</li>
