--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div id="education-block">
         <h2 class="heading">Etudes</h2>
-        <div class="etudes-block">
+        <div class="education-block">
             <h3>UTEC - AVON</h3>
             <span class="education-date">Sept 2019 - Juin 2021</span>
             <h4>BTS SIO option SLAM</h4>
