--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/xoqqaeky">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
+                <input type="email" name="_replyto" placeholder="Votre e-mail" required>
+                <textarea name="message" placeholder="Votre message" required></textarea>
                 <button type="submit">Envoyer</button>
             </form>
         </div>
