--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Faysel MENAN</h1>
             <h2>Développeur</h2>
-            <a href="#" class="btn-rounded-white">Télécharger mon C.V.</a>
+            <a href="CV-MENAN1.pdf" download="cv_faysel_menan.pdf" class="btn-rounded-white">Télécharger mon C.V.</a>
         </div>
         <!-- End #lead-content -->
 
