--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     <!-- End #experience -->
 
-    <div id="education-block">
+    <div id="education">
         <h2 class="heading">Etudes</h2>
         <div class="education-block">
             <h3>UTEC - AVON</h3>
