--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
                 <a href="#about">Présentation</a>
             </li>
             <li>
-                <a href="#experience">Expériences</a>
-            </li>
-            <li>
-                <a href="#education">Etudes</a>
+                <a href="#experience">Ma formation</a>
             </li>
             <li>
                 <a href="#projects">Projets</a>
@@ -73,7 +70,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Jeune étudiant en BTS SIO option SLAM, passioné de l'informatique depuis tout petit aimerant poursuivre dans une école d'ingénieur dans le big data.
+                        Jeune étudiant en BTS SIO option SLAM, passionné de l'informatique depuis tout petit adésirant poursuivre dans une école d'ingénieur dans le big data.
                     </p>
                 </div>
             </div>
@@ -82,7 +79,26 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Expériences</h2>
+        <h2 class="heading">Ma formation</h2>
+	    <div id="education">
+        <h2 class="heading">Etudes</h2>
+        <div class="education-block">
+            <h3>UTEC - AVON</h3>
+            <span class="education-date">Sept 2019 - Juin 2021</span>
+            <h4>BTS SIO option SLAM</h4>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>Université Evry Val-d'Essonne</h3>
+            <span class="education-date">Sept 2018 - Juin 2019</span>
+            <h4>L1 Informatique</h4>
+			<ul>
+	<div class="education-block">
+            <h3>Lycée Etienne Bezout</h3>
+            <span class="education-date">Sept 2015 - Juin 2018</span>
+            <h4>Bac S-SI option ISN</h4>
+			<ul>
         <div id="experience-timeline">
             <div data-date="Octobre 2019 – Juin 2021">
                 <h3>Atempo</h3>
@@ -105,20 +121,7 @@
     </div>
     <!-- End #experience -->
 
-    <div id="education">
-        <h2 class="heading">Etudes</h2>
-        <div class="education-block">
-            <h3>UTEC - AVON</h3>
-            <span class="education-date">Sept 2019 - Juin 2021</span>
-            <h4>BTS SIO option SLAM</h4>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>Université Evry Val-d'Essonne</h3>
-            <span class="education-date">Sept 2018 - Juin 2019</span>
-            <h4>L1 Informatique</h4>
-			<ul>
+    
 
         </div>
         <!-- End .education-block -->
