--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Ma formation</h2>
 	    <div id="education">
-        <h2 class="heading">Etudes</h2>
+        <h2 class="heading">Ma formation</h2>
         <div class="education-block">
             <h3>UTEC - AVON</h3>
             <span class="education-date">Sept 2019 - Juin 2021</span>
