--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Ma formation</h2>
 	    <div id="education">
-        <h2 class="heading">Ma formation</h2>
-        <div class="education-block">
             <h3>UTEC - AVON</h3>
             <span class="education-date">Sept 2019 - Juin 2021</span>
             <h4>BTS SIO option SLAM</h4>
-   
+   	</div>
 
         <div class="education-block">
             <h3>Université Evry Val-d'Essonne</h3>
             <span class="education-date">Sept 2018 - Juin 2019</span>
             <h4>L1 Informatique</h4>
 			<ul>
+	</div>
 	<div class="education-block">
             <h3>Lycée Etienne Bezout</h3>
             <span class="education-date">Sept 2015 - Juin 2018</span>
             <h4>Bac S-SI option ISN</h4>
 			<ul>
+	</div>
 	</div>
 	
 		        <!-- End .education-block -->
