--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Ma formation</h2>
 	    <div id="education">
+		    
+	<div class="education-block">
             <h3>UTEC - AVON</h3>
             <span class="education-date">Sept 2019 - Juin 2021</span>
             <h4>BTS SIO option SLAM</h4>
+			<ul>
    	</div>
 
         <div class="education-block">
