--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <h3>Atempo</h3>
                 <h4>Développeur</h4>
                 <p>
-                   Chargé de traquer les bugs, programmation en Perl
+                   Chargé de traquer les bugs, programmation en Perl.
 				</p>
             </div>
 
