--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Ma formation</h2>
 	    <div id="education">
-		    
+	
+	<div id="experience-timeline">	    
 	<div data-date="Sept 2019 - Juin 2021">
             <h3>UTEC - AVON</h3>
             <h4>BTS SIO option SLAM</h4>
