--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div id="experience-timeline">
             <div data-date="Octobre 2019 – Juin 2021">
                 <h3>Atempo</h3>
-                <h4>Développeur</h4>
+                <h4>Apprenti Développeur</h4>
             </div>
 
             <div data-date="Avril 2015">
