--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Jeune étudiant en BTS SIO option SLAM, passionné de l'informatique depuis tout petit adésirant poursuivre dans une école d'ingénieur dans le big data.
+                        Etudiant en BTS SIO option SLAM, passionné de l'informatique depuis tout petit adésirant poursuivre dans une école d'ingénieur dans le big data.
                     </p>
                 </div>
             </div>
