--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 	    <div id="education">
 	
 <div id="experience-timeline">	    
-		<div data-date="Sept 2019 - Juin 2021">
+		<
+	3div data-date="Sept 2019 - Juin 2021">
             		<h3>UTEC - AVON</h3>
             		<h4>BTS SIO option SLAM</h4>
    		</div>
@@ -103,7 +104,7 @@
 		        <!-- End .education-block -->
 		
 							
-
+<div id="experience-timeline">
 		<div data-date="Octobre 2019 – Juin 2021">
                 	<h3>Atempo</h3>
                 	<h4>Apprenti Développeur</h4>
