--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 	    <div id="education">
 	
 <div id="experience-timeline">	    
-		<
-	3div data-date="Sept 2019 - Juin 2021">
+		<div data-date="Sept 2019 - Juin 2021">
             		<h3>UTEC - AVON</h3>
             		<h4>BTS SIO option SLAM</h4>
    		</div>
