--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Etudiant en BTS SIO option SLAM, passionné de l'informatique depuis tout petit adésirant poursuivre dans une école d'ingénieur dans le big data.
+                        Etudiant en BTS SIO option SLAM, passionné de l'informatique depuis tout petit désirant poursuivre dans une école d'ingénieur dans le big data.
                     </p>
                 </div>
             </div>
@@ -97,9 +97,8 @@
             		<h3>Lycée Etienne Bezout</h3>
             		<h4>Bac S-SI option ISN</h4>
 		</div>
-	</div>
-</div>
-	
+
+	<p></p>
 		        <!-- End .education-block -->
 		
 							
@@ -114,6 +113,8 @@
                		 <h4>Stage de découverte</h4>
             	</div> 
         </div>
+</div>
+</div>
 </div>
     <!-- End #experience -->
 
