--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div id="experience-timeline">	
 		<div data-date="Octobre 2019 – Juin 2021">
                 	<h3>Atempo</h3>
-                	<h4>Apprenti Développeur</h4>
+                	<h4>Apprenti R&D</h4>
 			
             	</div>
 		<div data-date="Sept 2019 - Juin 2021">
