--- a/index.html
+++ b/index.html
@@ -167,18 +167,14 @@
             <li>Perl</li>
             <li>Mathlabs</li>
             <li>SolidWorks</li>
-            <li>JavaScript</li>
             <li>Java</li>
             <li>HTML</li>
-            <li>C#</li>
-            <li>C++</li>
+            <li>C</li>
             <li>Ruby on Rails</li>
             <li>Python</li>
             <li>Ruby</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Makefile</li>
+            <li>CMake</li>
         </ul>
     </div>
     <!-- End #skills -->
