--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Faysel MENAN</h1>
-            <h2>Développeur</h2>
+            <h2>Apprenti</h2>
             <a href="portfolio/CV-MENAN1.pdf" download="cv_faysel_menan.pdf" class="btn-rounded-white">Télécharger mon C.V.</a>
         </div>
         <!-- End #lead-content -->
